--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
   "authors": [
     {
       "name": "Kirill Litvinov",
-      "email": "Kirill.Litvinov@nixsolutions.com"
+      "email": "kirlitvinov@yandex-team.ru"
     }
   ],
   "autoload": {
